fix login spacing

--- a/client/src/components/nav/session.css
+++ b/client/src/components/nav/session.css
@@ -29,7 +29,7 @@
 }
 
 .login-form {
-  height: 400px;
+  height: 480px;
 }
 
 .session-bitter-frog {
